fix the issue with not fixed jumpto

--- a/src/components/layout/General_TIB.css
+++ b/src/components/layout/General_TIB.css
@@ -1348,23 +1348,26 @@ p{
         The styles for the tree view container. 
         It is responsible for the left part of the tree page that keeps the tree inside. 
      */
-
-    height: 1000px;
-    overflow-y: scroll;
+        
     padding-bottom: 500px !important;    
-    z-index: 600;    
-    background-color: white;
-    /* scrollbar-width: none;     */
+    background-color: white;    
     width: 900px;
     float: left;
-    /* position: relative; */
+    position: relative;
 }
 .tree-page-left-part::-webkit-scrollbar {
     /* display: none; */
 }
 
 .tree-container{
+    /* 
+        Tree container style
+    */
+
     margin-top: 100px;    
+    z-index: 9000;
+    overflow-y: scroll;
+    height: 1000px;
 }
 
 
@@ -1998,16 +2001,16 @@ Jumpto styles
     border: 1px solid #ced4da;
 }
 
-.jumpto-form-fixer{
+.jumpto-wrapper{
     /*
-        styles for fixing/modifying search box in tree view 
+        styles for jumpto wrapper
      */
     margin-bottom: 120px;
     margin-left: 30px;     
     position: absolute;
     top: 0;
-    /* z-index: 500; */
-    /* width: 50%; */
+    left: 0;
+    width: 100%;
 }
 
 .selected-by-arrow-key{
