--- a/src/components/layout/Nfdi4chem.css
+++ b/src/components/layout/Nfdi4chem.css
@@ -1304,22 +1304,26 @@ p{
        The styles for the tree view container. 
        It is responsible for the left part of the tree page that keeps the tree inside. 
     */
-
-   height: 1000px;
-   overflow-y: scroll;
+       
    padding-bottom: 500px !important;    
-   z-index: 880;    
-   background-color: white;
-   scrollbar-width: none;    
+   background-color: white;    
    width: 900px;
    float: left;
+   position: relative;
 }
 .tree-page-left-part::-webkit-scrollbar {
-   display: none;
+   /* display: none; */
 }
 
 .tree-container{
-    margin-top: 100px;    
+   /* 
+       Tree container style
+   */
+
+   margin-top: 100px;    
+   z-index: 9000;
+   overflow-y: scroll;
+   height: 1000px;
 }
 
 .node-table-container{
@@ -1949,12 +1953,16 @@ Jumpto styles
     border: 1px solid #ced4da;
 }
 
-.jumpto-form-fixer{
+.jumpto-wrapper{
     /*
-        styles for fixing/modifying search box in tree view 
+        styles for jumpto wrapper
      */
-    margin-bottom: 12px;
-    margin-left: 30px;
+    margin-bottom: 120px;
+    margin-left: 30px;     
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .selected-by-arrow-key{
